Fix text selection Firefox bug

--- a/css/tictactoe.css
+++ b/css/tictactoe.css
@@ -107,13 +107,16 @@ button.clear {
   -moz-transition: opacity 0.5s ease;
   -ms-transition: opacity 0.5s ease;
   transition: opacity 0.5s ease;
+  -moz-user-select: none;
+  -webkit-user-select: none;
+  -o-user-select: none;
+  user-select: none;
 }
 
 .box.show {
   opacity: 1;
   z-index: 10;
 }
-
 
 
 /* Menu screens to pick number of players and piece */
